--- a/index.html
+++ b/index.html
@@ -44,18 +44,12 @@
       <div class="nav-links">
         <a href="index.html" class="active">Rapport</a>
         <a href="pages/admin.html" id="admin-link" style="display: none;">Admin</a>
-        <a href="#" id="login-link">Connexion</a>
+        <a href="#" id="login-link" style="display: none;">Connexion</a>
         <!-- Portal Link -->
-        <span class="nav-divider" id="portal-divider"></span>
-        <a href="https://vvaraldi.github.io/Orford_Patrouille/index.html" 
-           id="portal-link" 
-           class="portal-link" 
-           title="Retour au menu principal">
-          <svg class="portal-logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200">
-            <path d="M100 0 L200 200 L0 200 Z" fill="currentColor"/>
-          </svg>
-          Menu principal
-        </a>
+		<span class="nav-divider" id="main-menu-divider" ></span>
+		<a href="https://vvaraldi.github.io/Orford_Patrouille/index.html" id="main-menu-link" class="main-menu-link" title="Accéder au Menu principal">
+			<span class="main-menu-icon">🏠</span> Menu principal
+		</a>
       </div>
       <button class="mobile-menu-btn" id="mobile-menu-btn">☰</button>
     </nav>
@@ -69,15 +63,9 @@
       <div class="mobile-nav-links">
         <a href="index.html" class="active">Rapport</a>
         <a href="pages/admin.html" id="mobile-admin-link" style="display: none;">Admin</a>
-        <a href="#" id="mobile-login-link">Connexion</a>
+        <a href="#" id="mobile-login-link" style="display: none;">Connexion</a>
         <!-- Portal Link for mobile -->
-        <a href="https://vvaraldi.github.io/Orford_Patrouille/index.html" 
-           id="mobile-portal-link">
-          <svg style="width: 18px; height: 18px; margin-right: 8px; vertical-align: middle;" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 200">
-            <path d="M100 0 L200 200 L0 200 Z" fill="currentColor"/>
-          </svg>
-          Menu principal
-        </a>
+        <a href="https://vvaraldi.github.io/Orford_Patrouille/index.html" id="mobile-main-menu-link">🏠 Menu principal</a>
       </div>
     </div>
   </header>
