update cache and versions...

--- a/pages/admin.html
+++ b/pages/admin.html
@@ -3,9 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="Cache-Control" content="no-cache">
   <title>Administration - Signalisation Mont Orford</title>
-  <link rel="stylesheet" href="../css/main.css">
+  
+  <!-- Favicon -->
   <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🚧</text></svg>">
+
+  <!-- Load version manager first -->
+  <script src="../js/version-config.js"></script>
+  
+  <!-- Load CSS with version -->
+  <script>
+    document.write(`<link rel="stylesheet" href="../css/main.css?v=${window.AppVersion.version}">`);
+  </script>
+
   <style>
     /* Portal link styling */
     .portal-link {
@@ -181,9 +192,13 @@
   <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-storage-compat.js"></script>
   
   <!-- Application Scripts -->
-  <script src="../js/common.js"></script>
-  <script src="../js/auth.js"></script>
-  <script src="../js/trails-data.js"></script>
-  <script src="../js/admin.js"></script>
+  <script>
+    const v = window.AppVersion.version;
+    document.write(`<script src="../js/common.js?v=${v}"><\/script>`);
+    document.write(`<script src="../js/auth.js?v=${v}"><\/script>`);
+    document.write(`<script src="../js/trails-data.js?v=${v}"><\/script>`);
+    document.write(`<script src="../js/admin.js?v=${v}"><\/script>`);
+  </script>
+
 </body>
 </html>
