update tiem box in signalisation

--- a/index.html
+++ b/index.html
@@ -193,17 +193,20 @@
           <!-- Inspector info (auto-filled) -->
           <div class="form-section">
             <div class="form-section-title">👤 Inspecteur</div>
-            
-            <div class="form-row two-cols">
-              <div class="form-group">
-                <label class="form-label" for="inspector-name">Nom</label>
-                <input type="text" class="form-input" id="inspector-name" readonly>
-              </div>
-              <div class="form-group">
-                <label class="form-label" for="report-datetime">Date et heure</label>
-                <input type="text" class="form-input" id="report-datetime" readonly>
-              </div>
-            </div>
+			<div class="form-group">
+			  <label class="form-label" for="inspector-name">Nom</label>
+			  <input type="text" class="form-input" id="inspector-name" readonly>
+			</div>
+			<div class="form-row two-cols">
+			  <div class="form-group">
+				<label class="form-label" for="report-date">Date</label>
+				<input type="date" class="form-input" id="report-date" readonly>
+			  </div>
+			  <div class="form-group">
+				<label class="form-label" for="report-time">Heure</label>
+				<input type="time" class="form-input" id="report-time" readonly>
+			  </div>
+			</div>
           </div>
           
         </div>
